--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo list</title>
 </head>
 <body>
-    <h1>thing i need to do</h1>
+    <h1>Things i need to do:</h1>
     <table>
         {% for item in items %}
             <tr>
